--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "sync-reactbits": "node scripts/sync-reactbits-components.js"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
@@ -21,6 +22,7 @@
     "@react-three/rapier": "^2.1.0",
     "@stripe/stripe-js": "^7.5.0",
     "@types/bcryptjs": "^2.4.6",
+    "animejs": "^4.0.2",
     "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.6",
